--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,7 +32,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 32
     aaptOptions {
     noCompress 'tflite'
     noCompress 'lite'
@@ -49,7 +49,7 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.vaibhav.ocr"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 31
         multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -77,10 +77,13 @@ flutter {
 dependencies {
 implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 implementation 'com.android.support:multidex:1.0.3'
+implementation platform('com.google.firebase:firebase-bom:28.0.1') 
+implementation "com.google.firebase:firebase-ml-vision:24.1.0"
 implementation 'com.google.android.gms:play-services-vision:20.1.1'
 implementation 'com.google.android.gms:play-services-vision-common:19.1.1'
+implementation'com.google.firebase:firebase-auth:16.1.0'
 implementation 'com.google.android.gms:play-services-vision-image-label:18.0.5'
-implementation "com.google.firebase:firebase-ml-vision:24.1.0"
+
 }
 
 apply plugin: 'com.google.gms.google-services'
