--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,18 +22,24 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  firebase_ml_vision: 
-  camera: ^0.5.7+4
-  path_provider: ^1.6.7
-  intl: ^0.16.1
-  webview_flutter: ^2.0.14
+  cupertino_icons: ^1.0.5
+  firebase_ml_vision: ^0.9.10
+  camera:
+    git:
+      url: https://github.com/flutter/plugins
+      path: packages/camera/camera
+      ref: 9e46048ad2e1f085c1e8f6c77391fa52025e681f
+  path_provider: ^2.0.11
+  intl: ^0.17.0
+  webview_flutter: ^3.0.4
   minimize_app: ^0.1.1
   url_launcher: ^6.0.5
   flutter_mobile_vision: ^0.1.4+1
   tflite: ^1.1.2
   image_picker: ^0.8.0+4
   splashscreen: ^1.3.5
+  firebase_core: ^2.3.0
+  flutter_launcher_icons: ^0.11.0
 
 dev_dependencies:
   flutter_test:
